# f-shell

./: .gitignore  PROJECT_TRACK.md  README.md  UX_BACKLOG.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs  models.rs  state.rs
src/components/: AboutUpdateDialog.tsx  CodeEditorPane.tsx  ConnectDialog.tsx  FileActionDialog.tsx  HostDetailPanel.tsx  HostRuntimeSection.tsx  PasswordStorageDialog.tsx  PreviewWorkspace.tsx  RemoteFileTree.tsx  ServerMetricsPanel.tsx  TerminalTabContextMenu.tsx  TerminalToolbar.tsx  TopToolbar.tsx  TreeContextMenu.tsx
src/lib/: connectionProfiles.ts  runtimeConnection.ts
tools/: generate-icons.ps1  generate-update-manifest.ps1
