[package]
name = "fshell"
version = "0.2.13"
description = "A modern Rust shell workspace"
authors = ["唐如飞"]
edition = "2021"
rust-version = "1.86"

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
base64 = "0.22.1"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ssh2 = "0.9.5"
tauri = { version = "=2.10.3", features = [] }
url = "2.5.4"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tauri-plugin-updater = "2.10.0"
